--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
 
@@ -80,7 +81,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>3.3.1</version>
 				<configuration>
 					<configLocation>checkstyle.xml</configLocation>
 					<failOnViolation>true</failOnViolation>
