--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,14 +9,13 @@ spring:
   sql:
     init:
       mode: always
+      schema-locations: classpath:schema.sql
+      data-locations: classpath:data.sql
   datasource:
-    url: jdbc:h2:file:./db/filmorate;
+    url: jdbc:h2:file:./db/filmorate;AUTO_SERVER=TRUE
     driverClassName: org.h2.Driver
     username: sa
     password: password
   h2:
     console:
       enabled: 'true'
-      settings:
-        trace: 'false'
-      path: /h2-console
