--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,7 +12,7 @@ spring:
       schema-locations: classpath:schema.sql
       data-locations: classpath:data.sql
   datasource:
-    url: jdbc:h2:file:./db/filmorate;AUTO_SERVER=TRUE
+    url: jdbc:h2:file:./db/filmorate
     driverClassName: org.h2.Driver
     username: sa
     password: password
